--- a/api/static/styles/questions.css
+++ b/api/static/styles/questions.css
@@ -57,7 +57,7 @@ body {
  width: 80%;
  color: var(--forth);
  position: relative;
- transition: ease 0.5;
+ transition: opacity ease 0.5 0.1;
 }
 
 .container::before {
