Added submit handler

--- a/api/templates/questions.html
+++ b/api/templates/questions.html
@@ -14,7 +14,7 @@
  <div id='container' class="container">
   <p id="questionNo">Question 1/20</p>
   <p id="question">What is capital of India ?</p>
-  <form id="options">
+  <form id="options" onsubmit="submitClick()">
    <div class="option">
     <input type="radio" name="op" class="radiooption" id="op1" value="Kolkata">
     <label for="op1" id="label1">Kolkata</label>
